2003-05-23  Ken Raeburn  <raeburn@mit.edu>

	* configure.in: Don't use libkrb524.a any more.
	* ftpd.c: Don't include krb524.h.
	(main): Don't call krb524_init_ets.

2003-01-10  Ken Raeburn  <raeburn@mit.edu>

	* configure.in: Use V5_AC_OUTPUT_MAKEFILE instead of
	K5_GEN_MAKEFILE and K5_AC_OUTPUT.

2002-12-06  Ezra Peisach  <epeisach@bu.edu>

	* configure.in: Quote the argument to AC_CHECK_HEADER. Autoconf
	2.57 was having problems.

2002-11-26  Tom Yu  <tlyu@mit.edu>

	* configure.in: Set SETENVSRC correctly.

2002-08-29  Ken Raeburn  <raeburn@mit.edu>

	* Makefile.in: Revert $(S)=>/ change, for Windows support.

2002-08-23  Ken Raeburn  <raeburn@mit.edu>

	* Makefile.in: Change $(S)=>/ and $(U)=>.. globally.

2001-07-24  Tom Yu  <tlyu@mit.edu>

	* configure.in: Add check for getev() to avoid problems when
	building setenv.c from appl/bsd.

2001-06-21  Ezra Peisach  <epeisach@mit.edu>

	* configure.in (SETENVOBJ): Define NEED_SETENV if compiling our own.

2001-03-07  Ken Raeburn  <raeburn@mit.edu>

	* configure.in: Check for strerror.

2000-11-01  Ezra Peisach  <epeisach@mit.edu>

	* configure.in: Use AC_CHECK_FUNCS, AC_CHECK_HEADERS, AC_C_CONST
	instead of the older names AC_HAVE_FUNCS, AC_HEADER_CHECK,
	AC_CONST. Consolidate use of function testing macros.

2000-03-24  Ken Raeburn  <raeburn@mit.edu>

	* configure.in: Check for alpha*-dec-osf* instead of
	alpha-dec-osf*.

1999-10-26  Wilfredo Sanchez  <tritan@mit.edu>

	* Makefile.in: Clean up usage of CFLAGS, CPPFLAGS, DEFS, DEFINES,
	LOCAL_INCLUDES such that one can override CFLAGS from the command
	line without losing CPP search patchs and defines. Some associated
	Makefile cleanup.

1999-04-13    <tytso@rsts-11.mit.edu>

	* configure.in: Check to see if we need to pull in the util
		library in order to find logwtmp().  (Needed for
		Linux/glibc 2.1.)

Wed Mar 24 17:14:06 1999  Tom Yu  <tlyu@mit.edu>

	* configure.in: Check for sys/sockio.h for systems that need it
	for SIOCATMARK.
